Remove -ms-autohiding-scrollbar for prevent overlap the table content

--- a/scss/_tables.scss
+++ b/scss/_tables.scss
@@ -174,7 +174,6 @@
         width: 100%;
         overflow-x: auto;
         -webkit-overflow-scrolling: touch;
-        -ms-overflow-style: -ms-autohiding-scrollbar; // See https://github.com/twbs/bootstrap/pull/10057
 
         // Prevent double border on horizontal scroll due to use of `display: block;`
         > .table-bordered {
